fix spacing of files

--- a/src/components/MainOS/MainOS.scss
+++ b/src/components/MainOS/MainOS.scss
@@ -28,6 +28,9 @@
         position: relative;
         flex-grow: 9;
         height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 @keyframes flicker {
