--- a/src/components/MainOS/Pages/Pages.scss
+++ b/src/components/MainOS/Pages/Pages.scss
@@ -1,29 +1,34 @@
 .desktop-files {
     display: flex;
     flex-flow: column wrap;
-    height: 100%;
-    width: fit-content;
+    height: calc(100% - 4rem);
+    width: calc(100% - 4rem);
 
-    .file {
-        margin: 2rem 0 0 2rem;
-        cursor: pointer;
-        word-break: initial;
-    }
+    justify-content: flex-start;
+    align-content: baseline;
+    gap: 2rem;
+}
 
-    div {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+.file {
+    margin: 2rem 0 0 2rem;
+    cursor: pointer;
+    word-break: initial;
+}
 
-        padding: 0.5rem;
+div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-        img {
-            margin-bottom: 0.3rem;
-            animation: float 4s ease-in-out infinite;
-        }
+    padding: 0.5rem;
+
+    img {
+        margin-bottom: 0.3rem;
+        animation: float 4s ease-in-out infinite;
     }
 }
+
 
 #rand-gif {
     width: 100%;
@@ -43,5 +48,3 @@
         transform: translatey(0px);
     }
 }
-
-
